tests/grammars/reject/missing-token-default.aug
grammar missing-token-default {
  token /#.*\n/
}
